<?xml version="1.0"?>
<package format="2">
  <name>hand_test4</name>
  <version>0.0.0</version>
  <description>The hand_test4 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="leontono@todo.todo">Leon Tonouchi</maintainer>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
